# scheme-dict

./: Makefile.am  configure.ac
doc/: README.tex  report.css  report.txt
src/: Makefile.am  scheme-dict.in
src/crypt/: md5.scm
src/inet/: dict.scm
src/util/: destructure.scm
